--- a/kaldi2.html
+++ b/kaldi2.html
@@ -11,9 +11,8 @@
 
 <body>
     <div class="header">
+        <img src="assets/090C8883-CC7D-43F0-99B3-2E54480A89B8-removebg-preview.png" alt="" class="imagem">
         <div class="container">
-            <img src="assets/090C8883-CC7D-43F0-99B3-2E54480A89B8-removebg-preview.png" alt="Kaldi solutions"
-                style="width: 100px;">
             <div class="navbar">
                 <li><b>Inicial</b> </li>
                 <li> <b>Quem somos</b></li>
@@ -29,12 +28,12 @@
 
     <div class="banner">
         <div class="container">
-            <span class="spanum">
-                <h2 class="titulo">Kaldi</h2>
-                <h4>Solutions</h4>
-                <h3>O seu negocio bem encaminhado
-                </h3>
-            </span>
+            <div class="caixa">
+                <span id="titulo">Kaldi</span>
+                <span id="titulo2">Solutions</span>
+                <span id="titulo3">O seu negocio bem encaminhado
+                </span>
+            </div>
         </div>
     </div>
     <img src="" alt="">
@@ -47,9 +46,10 @@
             </div>
 
             <div class="box2">
-                <img src="assets/monitorando estufa-int.jpg" alt="" style="width: 500px; height: 300px; border-radius: 30px;" class="img">
+                <img src="assets/monitorando estufa-int.jpg" alt=""
+                    style="width: 500px; height: 300px; border-radius: 30px;" class="img">
                 <H4 class="sobre2">Profissional monitorando a temperatura de uma estufa de café,
-                     por meio de acesso remoto </H4>
+                    por meio de acesso remoto </H4>
             </div>
         </div>
     </div>
